# Minecraft

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
res/shaders/: frag.glsl  vert.glsl
src/: camera.hpp  debug.hpp  main.cpp  utils.hpp
src/renderer/: buffer.cpp  buffer.hpp  gl_object.hpp  index_buffer.cpp  index_buffer.hpp  opengl.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  texture_array.cpp  texture_array.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_buffer_layout.cpp  vertex_buffer_layout.hpp
src/world/: chunk.cpp  chunk.hpp  world.cpp  world.hpp
